--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Build
       run: go build -v cmd/
 
-    - name: Test
-      run: go test -v cmd/
+    # - name: Test
+    #   run: go test -v cmd/
